# bright_spot_detector

./: CMakeLists.txt  README.md  gstreamer.sh  package.xml
launch/: realsense.launch.py
src/: BrightSpotDetector.cpp
